--- a/boardStupid.css
+++ b/boardStupid.css
@@ -1,4 +1,67 @@
 *{
 	box-sizing: border-box;
 }
+body {
+	margin:auto;
+	background-color: cornflowerblue;
+}
+section  {
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr;
+}
 
+.game {
+	margin: 0px 0px 0px 20px;
+	border: 1px solid darkorange;
+}
+
+.info {
+	font-size: .5em;
+}
+
+h1 {
+	text-align: center;
+	color: darkorange;
+}
+
+h3 {
+	margin:0px;
+}
+
+a {
+	font-size: .7em;
+}
+
+h2 {
+	font-size: 10px;
+	margin:auto;
+
+}
+
+input {
+ 	font-size: .5em;
+	align-items: center;
+}
+
+label {
+	font-size: 5px;
+}
+
+.entry {
+	height:20px;
+}
+
+form {
+	align-content: center;
+	justify-content: center;
+	padding:20px
+}
+
+.button {
+
+	justify-content: center;
+	font-size: 10px;
+	padding:10px;
+	align-self: center;
+
+}
