--- a/boardStupid.css
+++ b/boardStupid.css
@@ -1,11 +1,30 @@
 *{
 	box-sizing: border-box;
 }
+
 body {
 	margin:auto;
 	color: #e67e00;
 }
+
+nav {
+	display:flex;
+	justify-content:space-between;
+}
+
+h1 {
+	justify-content: flex-start;
+	color: #e67e00;
+	margin:0;
+}
+
+.login {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
 section  {
+	padding:10px;
 	display:grid;
 	grid-template-columns: 1fr 1fr 1fr;
 }
@@ -19,10 +38,7 @@ section  {
 	font-size: .5em;
 }
 
-h1 {
-	text-align: center;
-	color: #e67e00;
-}
+
 
 h3 {
 	margin:0px;
@@ -45,7 +61,6 @@ input {
 	align-items: center;
 	border-color: cornflowerblue;
 	border-width: 1px;
-
 	color: #e67e00;
 	font-weight: bolder;
 }
@@ -67,7 +82,7 @@ form {
 .button {
 
 	justify-content: center;
-	font-size: 10px;
+	font-size: 0px;
 	padding:10px;
 	align-self: center;
 
